add Dockerfile, change README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 info.app.name=This is rest full application
 info.app.description=This is my spring boot application for Novacom
 info.app.version=1.0.0
+
+spring.application.name=@project.name@
+spring.application.formattedVersion=(v@project.version@)
